--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -42,9 +42,15 @@
     "react-stripe-checkout": "^2.6.3",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "styled-components": "^5.3.10"
+    "sourcemap-codec": "^1.4.8",
+    "stable": "^0.1.8",
+    "styled-components": "^5.3.10",
+    "svgo": "^3.0.2",
+    "w3c-hr-time": "^1.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@rollup/plugin-terser": "^0.4.3",
     "react-scripts": "^5.0.1"
   }
 }
