--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,4 @@
-MONGODB_URL= mongodb+srv://Ayush:a1y2u3s4h5@cluster0.zu1tsmk.mongodb.net/Store?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://Ayush:a1y2u3s4h5@cluster0.zu1tsmk.mongodb.net/Store?retryWrites=true&w=majority
 SECRET_PASSPHRASE=abcd1234
 SECRET_JWT=abcd5678
+NETLIFY_AUTH_TOKEN=dBaCyW3xZUP4SzlhQqkhlpvt-I0JeRRlgh_8qM8yL7M
