--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,1 @@
-REACT_BASE_URL=https://clothescornerbackend1-ayushbansal1928.b4a.run/
+REACT_BASE_URL=https://clothescornerbackend1-ayushbansal1928.b4a.run
